noinst_LTLIBRARIES = libblas.la

libblas_la_SOURCES = dasum.f dcopy.f dgemm.f dnrm2.f drotm.f dscal.f dspr.f \
                     dsymm.f dsyr2.f dtbmv.f dtpsv.f dtrsm.f dznrm2.f \
                     daxpy.f ddot.f dgemv.f drot.f drotmg.f dsdot.f \
		     dspr2.f dsymv.f dsyr2k.f dtbsv.f dtrmm.f dtrsv.f \
                     dcabs1.f dgbmv.f dger.f drotg.f dsbmv.f dspmv.f \
                     dswap.f dsyr.f dsyrk.f dtpmv.f dtrmv.f dzasum.f
